--- a/Resources/config.properties
+++ b/Resources/config.properties
@@ -2,14 +2,14 @@
 #user = Usuario de base de datos
 #Password = pass de base de datos
 #ipdb = direccion ip del servidor de base de datos
-#port = ppuerto de conexion de base de datos
+#port = puerto de conexion de base de datos
 
-bd = localhost
+bd = comss
 
 ipbd = 	127.0.0.1
 
 password = root
 
-port = 1443
+port = 1433
 
-user = admin	
+user = root
