--- a/pom.xml
+++ b/pom.xml
@@ -73,5 +73,36 @@
 
 		</plugins>
 	</build>
+	<dependencies>
+	<!-- https://mvnrepository.com/artifact/com.google.gwt/gwt-user -->
+<!-- <dependency>
+    <groupId>com.google.gwt</groupId>
+    <artifactId>gwt-user</artifactId>
+    <version>2.8.2</version>
+    <scope>provided</scope>
+</dependency>
+	
+	https://mvnrepository.com/artifact/com.google.gwt/gwt-servlet
+<dependency>
+    <groupId>com.google.gwt</groupId>
+    <artifactId>gwt-servlet</artifactId>
+    <version>2.8.2</version>
+    <scope>runtime</scope>
+</dependency>
+	
+	https://mvnrepository.com/artifact/com.google.gwt/gwt-dev
+<dependency>
+    <groupId>com.google.gwt</groupId>
+    <artifactId>gwt-dev</artifactId>
+    <version>2.8.2</version>
+    <scope>provided</scope>
+</dependency>
+	 -->
+	  <dependency>
+            <groupId>com.microsoft.sqlserver</groupId>
+            <artifactId>mssql-jdbc</artifactId>
+            <version>7.0.0.jre8</version>
+        </dependency>
+	</dependencies>
 
 </project>
